fix: CSS flow on iOS 16+ safari

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -117,7 +117,6 @@
 
   #root {
     height: 100%;
-    overflow: auto;
   }
 }
 
